# wak_lang

./: CMakeLists.txt  Makefile  example_file.txt  example_file_long.txt  long_example_file.txt
docs/: TODO.md
docs/design/: lexer.md  optimization_technique.md  parser.md  tail_calls.md  util.md  v0.0.1.md  wak_ir.md
docs/notes/: lexer_str_reduction.md
include/wak_lang/: assert.h  debug_break.h  lexer.h  parser.h  timers.h  token.h  token_module.h
include/wak_lang/ast/: block.h  constant.h  data_type.h  error.h  expression.h  statement.h  statement_debug.h  statement_error.h  value.h  variable.h
include/wak_lang/ir/: statement.h  value.h
include/wak_lang/llvm_ir/: instructions.h
include/wak_lang/util/: algorithms.h  array.h  assert.h  const_str_map.h  def.h  file.h  kv_map.h  mem.h  str_map.h  timers.h  vector.h
include/wak_lib/: algorithms.h  array.h  assert.h  const_str_map.h  def.h  file.h  mem.h  str_map.h  timers.h  vector.h
src/: lexer.c  main.c  parser.c  timers.c  token.c
src/util/: array.c  file.c  mem.c  timers.c  vector.c
src/wak_lang/: lexer.c  main.c  parser.c  tail_parser.c  token.c
src/wak_lib/: array.c  file.c  mem.c  timers.c  vector.c
tests/: lex_speed.c
